--- a/index.html
+++ b/index.html
@@ -501,10 +501,10 @@
                                     <a class="image-link" href="https://furniture.dreamultra.xyz/">
                                         <figure>
                                             <img src="img/ec.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Website to buy/sell Furniture</h4>
-                                                <p>E-commerce</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Website to buy/sell Furniture</h6>
+                                                <p class="text-muted mt-2">Type : E-commerce</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
@@ -514,10 +514,10 @@
                                     <a class="ajax-link" href="https://shop.dreamultra.xyz/ ">
                                         <figure>
                                             <img src="img/ec.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Buy / Sell different kind of products.</h4>
-                                                <p>E-commerce</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Buy / Sell different kind of products.</h6>
+                                                <p class="text-muted mt-2">Type : E-commerce</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
@@ -527,10 +527,10 @@
                                     <a class="ajax-link" href="https://ecommerce.avientech.com/">
                                         <figure>
                                             <img src="img/ec.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Buy / Sell different kind of products.</h4>
-                                                <p>E-commerce</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Buy / Sell different kind of products.</h6>
+                                                <p class="text-muted mt-2">Type : E-commerce</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
@@ -540,10 +540,10 @@
                                     <a class="image-link" href="https://restaurant.dreamultra.xyz/admin">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Restaurant Management (Without page refresh)</h4>
-                                                <p>Software</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Restaurant Management (Without page refresh)</h6>
+                                                <p class="text-muted mt-2">Type : Software</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
@@ -553,10 +553,10 @@
                                     <a class="image-link" href="https://inventory.dreamultra.xyz/">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Inventory Pos Software (Without page refresh) </h4>
-                                                <p>Software</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Inventory Pos Software (Without page refresh) </h6>
+                                                <p class="text-muted mt-2">Type : Software</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
@@ -566,10 +566,10 @@
                                     <a class="image-link" href="https://hotel.dreamultra.xyz/admin">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Hotel Management System</h4>
-                                                <p>Software</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Hotel Management System</h6>
+                                                <p class="text-muted mt-2">Type : Software</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
@@ -579,10 +579,10 @@
                                     <a class="image-link" href="http://autoplus.avientech.com/">
                                         <figure>
                                             <img src="img/service.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Car Wash and Services.</h4>
-                                                <p>Services</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Car Wash and Services.</h6>
+                                                <p class="text-muted mt-2">Type : Service</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
@@ -592,10 +592,10 @@
                                     <a class="image-link" href="https://abirrugal.github.io/planet/">
                                         <figure>
                                             <img src="img/service.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Security Service Products.</h4>
-                                                <p>Services</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Security Service Products.</h6>
+                                                <p class="text-muted mt-2">Type : Service</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
@@ -605,10 +605,10 @@
                                     <a class="image-link" href="http://blog.dreamultra.xyz/">
                                         <figure>
                                             <img src="img/service.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Content Writing</h4>
-                                                <p>Services</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Content Writing</h6>
+                                                <p class="text-muted mt-2">Type : Service</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
@@ -628,10 +628,10 @@
                                     <a class="image-link" href="https://restaurant.dreamultra.xyz/admin">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Restaurant Management (Without page refresh)</h4>
-                                                <p>Software</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Restaurant Management (Without page refresh)</h6>
+                                                <p class="text-muted mt-2">Type : Software</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
@@ -641,10 +641,10 @@
                                     <a class="image-link" href="https://inventory.dreamultra.xyz/">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Inventory Pos Software (Without page refresh) </h4>
-                                                <p>Software</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Inventory Pos Software (Without page refresh) </h6>
+                                                <p class="text-muted mt-2">Type : Software</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
@@ -654,10 +654,10 @@
                                     <a class="image-link" href="https://hotel.dreamultra.xyz/admin">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Hotel Management System</h4>
-                                                <p>Software</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Hotel Management System</h6>
+                                                <p class="text-muted mt-2">Type : Software</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
@@ -676,10 +676,10 @@
                                     <a class="image-link" href="https://furniture.dreamultra.xyz/">
                                         <figure>
                                             <img src="img/ec.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Website to buy/sell Furniture</h4>
-                                                <p>E-commerce</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Website to buy/sell Furniture</h6>
+                                                <p class="text-muted mt-2">Type : E-commerce</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
@@ -689,10 +689,10 @@
                                     <a class="ajax-link" href="https://shop.dreamultra.xyz/ ">
                                         <figure>
                                             <img src="img/ec.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Buy / Sell different kind of products.</h4>
-                                                <p>E-commerce</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Buy / Sell different kind of products.</h6>
+                                                <p class="text-muted mt-2">Type : E-commerce</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
@@ -702,10 +702,10 @@
                                     <a class="ajax-link" href="https://ecommerce.avientech.com/">
                                         <figure>
                                             <img src="img/ec.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Buy / Sell different kind of products.</h4>
-                                                <p>E-commerce</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Buy / Sell different kind of products.</h6>
+                                                <p class="text-muted mt-2">Type : E-commerce</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
@@ -723,10 +723,10 @@
                                     <a class="image-link" href="http://autoplus.avientech.com/">
                                         <figure>
                                             <img src="img/service.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Car Wash and Services.</h4>
-                                                <p>Services</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Car Wash and Services.</h6>
+                                                <p class="text-muted mt-2">Type : Service</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
@@ -736,10 +736,10 @@
                                     <a class="image-link" href="https://abirrugal.github.io/planet/">
                                         <figure>
                                             <img src="img/service.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Security Service Products.</h4>
-                                                <p>Services</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Security Service Products.</h6>
+                                                <p class="text-muted mt-2">Type : Service</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
@@ -749,10 +749,10 @@
                                     <a class="image-link" href="http://blog.dreamultra.xyz/">
                                         <figure>
                                             <img src="img/service.jpg" alt="">
-                                            <figcaption>
-                                                <h4>Content Writing</h4>
-                                                <p>Services</p>
-                                            </figcaption>
+                                            <div class="my-3 mx-1 p-2" style="font-size:15px">
+                                                <h6>Content Writing</h6>
+                                                <p class="text-muted mt-2">Type : Service</p>
+                                            </div>
                                         </figure>
                                     </a>
                                 </div>
