Work link set target blank

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 brand graphic">
-                                    <a class="image-link" href="https://furniture.dreamultra.xyz/">
+                                    <a class="image-link" target="blank" href="https://furniture.dreamultra.xyz/">
                                         <figure>
                                             <img src="img/ec.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -537,7 +537,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" href="https://restaurant.dreamultra.xyz/admin">
+                                    <a class="image-link" target="blank" href="https://restaurant.dreamultra.xyz/admin">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -550,7 +550,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" href="https://inventory.dreamultra.xyz/">
+                                    <a class="image-link" target="blank" href="https://inventory.dreamultra.xyz/">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -563,7 +563,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" href="https://hotel.dreamultra.xyz/admin">
+                                    <a class="image-link" target="blank" href="https://hotel.dreamultra.xyz/admin">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -576,7 +576,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" href="http://autoplus.avientech.com/">
+                                    <a class="image-link" target="blank" href="http://autoplus.avientech.com/">
                                         <figure>
                                             <img src="img/service.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -589,7 +589,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" href="https://abirrugal.github.io/planet/">
+                                    <a class="image-link" target="blank" href="https://abirrugal.github.io/planet/">
                                         <figure>
                                             <img src="img/service.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -602,7 +602,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" href="http://blog.dreamultra.xyz/">
+                                    <a class="image-link" target="blank" href="http://blog.dreamultra.xyz/">
                                         <figure>
                                             <img src="img/service.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -625,7 +625,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" href="https://restaurant.dreamultra.xyz/admin">
+                                    <a class="image-link" target="blank" href="https://restaurant.dreamultra.xyz/admin">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -638,7 +638,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" href="https://inventory.dreamultra.xyz/">
+                                    <a class="image-link" target="blank" href="https://inventory.dreamultra.xyz/">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -651,7 +651,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" href="https://hotel.dreamultra.xyz/admin">
+                                    <a class="image-link" target="blank" href="https://hotel.dreamultra.xyz/admin">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -673,7 +673,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 brand graphic">
-                                    <a class="image-link" href="https://furniture.dreamultra.xyz/">
+                                    <a class="image-link" target="blank" target="blank" href="https://furniture.dreamultra.xyz/">
                                         <figure>
                                             <img src="img/ec.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -720,7 +720,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" href="http://autoplus.avientech.com/">
+                                    <a class="image-link" target="blank" href="http://autoplus.avientech.com/">
                                         <figure>
                                             <img src="img/service.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -733,7 +733,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" href="https://abirrugal.github.io/planet/">
+                                    <a class="image-link" target="blank" href="https://abirrugal.github.io/planet/">
                                         <figure>
                                             <img src="img/service.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -746,7 +746,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" href="http://blog.dreamultra.xyz/">
+                                    <a class="image-link" target="blank" href="http://blog.dreamultra.xyz/">
                                         <figure>
                                             <img src="img/service.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
