--- a/index.html
+++ b/index.html
@@ -153,10 +153,9 @@
                                 <ul>
                                     <li><span class="title">Name</span><span class="value">Abir Husain</span></li>
                                     <!--<li><span class="title">Age</span><span class="value">26 Years</span></li>-->
-                                    <li><span class="title">Residence</span><span class="value">Bangladesh, Dhaka</span>
+                                    <li><span class="title">Residence</span><span class="value">Dhaka , Bangladesh</span>
                                     </li>
-                                    <li><span class="title">Address</span><span class="value">Munshigonj, Sreenagar,
-                                            Bhagyakul</span></li>
+                                    <li><span class="title">Address</span><span class="value">Bhagyakul, Sreenagar, Munshigonj</span></li>
                                     <li><span class="title">Email</span><span class="value">abir.rugal@gmail.com</span>
                                     </li>
                                     <li><span class="title">Phone</span><span class="value">(+88) 01760711791</span>
@@ -791,7 +790,7 @@
                     <!--Contact Info Item-->
                     <div class="col-md-4 info-item">
                         <span class="icon"><i class="fas fa-map-marker-alt"></i></span>
-                        <h5>Division: Dhaka, District: Munshiganj, Police-Station: Sreenagar</h5>
+                        <h5>Division: Village:Bhagyakul, Police-Station: Sreenagar, District: Munshiganj </h5>
                     </div>
 
                     <!--Contact Info Item-->
