Update short details of my work

--- a/index.html
+++ b/index.html
@@ -126,17 +126,16 @@
                             <p>
                                 Greetings,
 
-                                I have 1.5 years of experience from project-based web development companies.
-                                I developed many websites like e-commerce, service related sites, POS Softwares etc.
-                                My expertise lies in making API for androids and other API-based websites.
-                                Previously, I also developed the API for a large-scale government website.
-                                I used PHP as a language and Laravel framework for the development.
-                                For Design purposes, I used Html, Css, JavaScript, and some front-end frameworks like
-                                Bootstrap, Semantic UI, etc.
-                                I can also create websites using Ajax and Vue.js, where people can browse and use their
-                                website easily without slow page refreshings.
-                                Software development is also within my abilities. Some of the ones I made are for Hotel
-                                managment, Inventory management, Restaurent management etc.
+                                I have 3 years of experience in project-based web development, specializing in creating websites like e-commerce platforms, service-related sites, and POS software.
+
+                                My expertise includes developing APIs for Android applications and other API-driven websites, including a large-scale government project.
+                                I primarily use PHP with the Laravel framework for backend development, and I am proficient in HTML, CSS, JavaScript, and front-end frameworks like Bootstrap and Semantic UI.
+                                
+                                I also have experience in developing dynamic websites using Ajax and Vue.js, ensuring seamless user experiences with minimal page refreshes.
+                                My software development work spans various industries, including hotel management, inventory management, and restaurant management systems.
+                                
+                                Recently, I have been working on live streaming applications where users can go live, engage in PK battles, and enjoy real-time communication through chat and video calls.
+                                I have been involved in implementing features such as Socket.io with Node.js for real-time interactions, and developing functionalities for users to purchase frames, themes, entry effects, and VIP packages. The platforms include various live streaming options like party live, single live, and multi-live sessions.
 
                             </p>
 
