Add new cv to download

--- a/index.html
+++ b/index.html
@@ -390,8 +390,6 @@
                                 <h3>Back-End Skills</h3>
                             </div>
 
-
-
                             <!--Coding Skill Item-->
                             <div class="skill-item">
                                 <h4 class="progress-title">PHP</h4>
@@ -431,9 +429,6 @@
                                     </div>
                                 </div>
                             </div>
-
-
-
                         </div>
                         <!--Coding Skills Column End-->
 
@@ -496,7 +491,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 brand graphic">
-                                    <a class="image-link" target="blank" href="https://furniture.dreamultra.xyz/">
+                                    <a class="image-link" target="blank" href="https://furniture.zfood.io">
                                         <figure>
                                             <img src="img/ec.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -509,7 +504,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="ajax-link" href="https://shop.dreamultra.xyz/ ">
+                                    <a class="ajax-link" href="https://shop.zfood.io ">
                                         <figure>
                                             <img src="img/ec.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -521,7 +516,7 @@
                                 </div>
 
                                 <!--Portfolio Item-->
-                                <div class="item col-lg-4 col-6 design graphic">
+                                <!-- <div class="item col-lg-4 col-6 design graphic">
                                     <a class="ajax-link" href="https://ecommerce.avientech.com/">
                                         <figure>
                                             <img src="img/ec.jpg" alt="">
@@ -531,11 +526,11 @@
                                             </div>
                                         </figure>
                                     </a>
-                                </div>
+                                </div> -->
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" target="blank" href="https://restaurant.dreamultra.xyz/admin">
+                                    <a class="image-link" target="blank" href="https://restaurant.zfood.io">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -548,7 +543,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" target="blank" href="https://inventory.dreamultra.xyz/">
+                                    <a class="image-link" target="blank" href="https://inventory.zfood.io">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -561,7 +556,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" target="blank" href="https://hotel.dreamultra.xyz/admin">
+                                    <a class="image-link" target="blank" href="https://hotel.zfood.io">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -623,7 +618,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" target="blank" href="https://restaurant.dreamultra.xyz/admin">
+                                    <a class="image-link" target="blank" href="https://restaurant.zfood.io">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -636,7 +631,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" target="blank" href="https://inventory.dreamultra.xyz/">
+                                    <a class="image-link" target="blank" href="https://inventory.zfood.io">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -649,7 +644,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="image-link" target="blank" href="https://hotel.dreamultra.xyz/admin">
+                                    <a class="image-link" target="blank" href="https://hotel.zfood.io">
                                         <figure>
                                             <img src="img/software.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -671,7 +666,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 brand graphic">
-                                    <a class="image-link" target="blank" target="blank" href="https://furniture.dreamultra.xyz/">
+                                    <a class="image-link" target="blank" target="blank" href="https://furniture.zfood.io">
                                         <figure>
                                             <img src="img/ec.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
@@ -684,7 +679,7 @@
 
                                 <!--Portfolio Item-->
                                 <div class="item col-lg-4 col-6 design">
-                                    <a class="ajax-link" href="https://shop.dreamultra.xyz/ ">
+                                    <a class="ajax-link" href="https://shop.zfood.io">
                                         <figure>
                                             <img src="img/ec.jpg" alt="">
                                             <div class="my-3 mx-1 p-2" style="font-size:15px">
